--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI = mongodb+srv://abenezerdehene31:rc3aQSfPymrCVU79@cluster0.lfo64.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+ADMIN_SECRET=admin-code
 JWT_SECRET = wordatnateos50504481
